feat: Add dummy parameter to get transfer listings by transfer day endpoint
